# midrc-etl

./: .gitignore  .pre-commit-config.yaml  .secinclude  .secrets.baseline  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml  readme Argo.md
DOI/: setup_MIDRC_DOI.ipynb
LOINC_mapping/: BIH_LOINC_mapping_template_2025.ipynb  LOINC_mapping_template_2025.ipynb  MIDRC_LOINC_mapping_workflow_ACR_RSNA.ipynb  MIDRC_LOINC_mapping_workflow_ACR_RSNA_SEQ.ipynb  MIDRC_LOINC_mapping_workflow_TCIA.ipynb
QC/: MIDRC_QC_prerelease_workflow.ipynb  MIDRC_preingest_QC.ipynb  MIDRC_preingest_QC_drbedit.ipynb  planxton_midrc.py
conversion/: convert_acr.py  convert_rsna.py
copy_s3/: copy_files.py
etl/: archive.py  base.py  config.yml  createZipFiles.py  extractData.py  regenstrief-s3-sftp.py  regenstrief_s3_sftp.py
misc/: copy_from_s3.py  copy_s3.py  delete.py  get_all_files.py  import_dicom_files.py  index_data.py  lambda_sftp_upload.py  midrc_ingestion_TEMPLATE.py  remove_dicom.py  remove_dicom_stuff.ipynb  remove_index_records.py  remove_records.py  run.sh  test.py
mlanalysis/: cleaning.py  conversion.py  download.py  mltestworkflow.yaml
notebooks/: Dockerfile  README.md  acr.ipynb  acr_0827.ipynb  acr_20220415.ipynb  cleanup.ipynb  create_packages.ipynb  get_all_packages.ipynb  get_open_dicom.ipynb  midrc_fix.ipynb  missing_rsna.ipynb  prepare_for_dicom_submission.ipynb  process_acr.ipynb  process_rsna.ipynb  removal.ipynb  rsna.ipynb  rsna_dicom.ipynb  sequestration_split.ipynb  sequestration_split_acr.ipynb  sequestration_split_rsna.ipynb  summit_aws.py  summit_db.py  test.ipynb  testHelloWorld.ipynb  work.ipynb  work_metadata.ipynb  work_smth.ipynb  work_with_inventory.ipynb  work_with_inventory_parquet.ipynb
notification/: slack.py  slackDataIngestionDone.py  slackDataIngestionStepDone.py  slackDataIngestionStepStart.py
packaging/: copy_from_s3.py  package_midrc_series.py  packaging_workflow_template.py  process_midrc_submission.py  sequestration_split.py
sequestration/: seq_data_preparation.ipynb  seq_data_transfer_tutorial.ipynb  update_master_seq_list.ipynb
sftp_lambda_integration/: README.md  archive.py  extractData.py  pyproject.toml  regenstrief_s3_sftp.py  test_s3_sftp.py
sop_class_mapping/: SOP_Class_mapping_workflow_MG_Series.ipynb  TableB5-1_Standard_SOP_Classes.tsv
(+50 files in other folders)
